package creational.builder.my_string;

public class MyString {
}
