@startuml
'https://plantuml.com/class-diagram

class Builder{
    MyString build()
}
class MyString{

    - MyString(Builder b)
    + toString()
}
class MyStringBuilder{
    String str
    + addString(String s)
    + addFloat(float f)}
    + addBool(boolen b)
    + toString()
}

MyString --> MyStringBuilder
Builder --> MyString
@enduml